use URL instead of URI
stapler is not able to autconvert String to URI
add more TODOs